--- a/wp-content/themes/enfold-child/scss/custom.scss
+++ b/wp-content/themes/enfold-child/scss/custom.scss
@@ -7,4 +7,5 @@
   @import "pages/homepage";
   @import "pages/page-issn-checker";
   @import "pages/single-post";
+  @import "pages/journals_listing";
 }
